# codeql-trap-prune

./: README.md  codeql-trap-prune.py  pyproject.toml
